# IdeaAgent

./: .env.example  .gitignore  README.md  install.ps1  install.sh  pyproject.toml
skills/agent/: SKILL.md  requirements.txt
skills/data-preprocessing/: SKILL.md  requirements.txt
skills/deep-learning/: SKILL.md  requirements.txt
skills/experiment-tracking/: SKILL.md  requirements.txt
skills/machine-learning/: SKILL.md  requirements.txt
skills/model-training/: SKILL.md  requirements.txt
skills/visualization/: README.md  SKILL.md  requirements.txt
src/ideaagent/: __init__.py  cli.py  config.py  context.py  context_manager.py  database.py  exceptions.py  llm.py  loop_detector.py  mcp.py  models.py  prompts.py  sandbox.py  state.py
src/ideaagent/skills/: __init__.py  manager.py
src/ideaagent/utils/: __init__.py  banner.py  bash_executor.py  code_parser.py  file_manager.py  stream_parser.py  workspace.py  workspace_rag.py
tests/: __init__.py  test_code_parser.py  test_database.py  test_exceptions.py  test_expagent.py
user_workspace/: README.md
